# markdown-redactor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  github-release.yml  release.yml
docs/: ARCHITECTURE.md  FAQ.md  GUIDE.md  README.md  RELEASING.md
examples/: basic_api.py  cli_usage.sh  custom_rule.py
src/markdown_redactor/: __init__.py  cli.py  engine.py  factory.py  markdown.py  ner.py  registry.py  rules.py  types.py
tests/: test_cli.py  test_engine.py  test_factory.py  test_ner.py  test_registry.py
