[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "markdown-redactor"
version = "0.1.4"
description = "Rule-based PII and secret redaction for Markdown documents — audit log, risk-level filtering, LLM pipeline ready"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "markdown-redactor" }]
keywords = [
  "markdown",
  "redaction",
  "pii",
  "llm",
  "security",
  "sanitization",
  "audit-log",
  "compliance",
  "data-privacy",
  "secret-detection",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: Text Processing :: Markup",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]
ner = ["spacy>=3.7.0"]

[project.scripts]
markdown-redactor = "markdown_redactor.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["spacy", "spacy.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_redactor"]
